API/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: api
  labels:
    name: api
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: probe
  selector:
    name: api
  type: NodePort
